--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -4,6 +4,5 @@ jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
-      - name: my-steps
-        run: |
-          make say-hello
+      - uses: actions/checkout@v2
+        run: make say-hello
